--- a/public/header.html
+++ b/public/header.html
@@ -40,30 +40,22 @@
         <b>|</b>
       </li>
       <li>
-        <a href="http://127.0.0.1:3001/shopcart.html?uid=1">
+        <a href="shopcart.html?uid=1">
           <img src="img/index/shop_car.png" alt="" title="我的购物车">
         </a>
         <b>|</b>
       </li>
       <li>
-        <a href="http://127.0.0.1:3001/user_register.html" title="新用户注册" class="font" target="_blank">&nbsp;注册</a>
+        <a href="user_register.html" title="新用户注册" class="font" target="_blank">&nbsp;注册</a>
         <b>|</b>
       </li>
       <li>
-        <a href="http://127.0.0.1:3001/user_login.html" title="用户登录" class="font" target="_blank">&nbsp;登录</a>
+        <a href="user_login.html" title="用户登录" class="font" target="_blank">&nbsp;登录</a>
       </li>
     </ul>
     </div>
   </div>
 
-  <!--<div id="top">
-    <div class="weblogo">
-        <a href="index.html">
-          <img src="img/logo/logo1.png" alt="" class="logo">&nbsp;
-          <strong class="title">KUER</strong>&nbsp;&nbsp;&nbsp;
-          <span>|&nbsp;&nbsp;&nbsp;酷尔商城</span>
-        </a>
-      </div>
-    </div>-->
+
 </body>
 </html>
