--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
 						<li><a href="javascript:;" target="_blank">HUAWEI 麦芒系列</a></li>
 						<li><a href="javascript:;" target="_blank">华为畅享系列</a></li>
 					</ul>
-					<div class="channel-more"><a href="http://127.0.0.1:5500/public/product_category.html" target="_blank">更多</a></div>
+					<div class="channel-more"><a href="product_category.html" target="_blank">更多</a></div>
 			</div>
 				<!--手机产品图-->
 			<div class="b">
