--- a/public/header.html
+++ b/public/header.html
@@ -56,6 +56,14 @@
     </div>
   </div>
 
-
+  <!--<div id="top">
+    <div class="weblogo">
+        <a href="index.html">
+          <img src="img/logo/logo1.png" alt="" class="logo">&nbsp;
+          <strong class="title">KUER</strong>&nbsp;&nbsp;&nbsp;
+          <span>|&nbsp;&nbsp;&nbsp;酷尔商城</span>
+        </a>
+      </div>
+    </div>-->
 </body>
 </html>
