--- a/public/product_details.html
+++ b/public/product_details.html
@@ -477,7 +477,7 @@
 <footer class="footerpage"></footer>
 
   <script src="js/jquery-3.2.1.js"></script> 
-  <script src="js/details12.js"></script> 
+  <script src="js/sq.js"></script> 
 
 </body>
 </html>
